# git-packaging

./: AUTHORS  Makefile.am  NEWS  README  configure.ac
lib/: gp-autoconf  gp-cleanup  gp-debian  gp-git
